--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     rate their own current lives on that scale. The columns following the happiness score estimate the extent to
                     which each of six factors - <span class="emphasize">economic production, social support, life expectancy,
                         freedom, absence of
-                        corruption and generosity</span> - contribute to making life evaluations higher in each countries than they
+                        corruption and generosity</span> - contribute to making life evaluations higher in each countries than
+                    they
                     are in
                     Dystopia, a hypothetical country that has values equal to the world's lowest national averages for each of the
                     six factors. They have no impact on the total score reported for each country, but they do explain why some
@@ -45,20 +46,33 @@
         </section>
         <main class="container">
             <div class="graph-title">
-                <h2 class="graph-title--title" id="densityTitle">How the score looks globally through the years?</h2>
+                <h2 class="graph-title--title"
+                    id="densityTitle">How the score looks globally through the years?</h2>
             </div>
             <div class="density-graphs"></div>
             <div class="graph-title">
-                <h2 class="graph-title--title" id="spiderTitle">But, what factors make us happier?</h2>
+                <h2 class="graph-title--title"
+                    id="spiderTitle">But, what factors make us happier?</h2>
             </div>
             <div class="spider-graph">
                 <div class="tooltip"></div>
             </div>
-            <div class="individual-graphs"></div>
+            <div class="graph-title">
+                <h2 class="graph-title--title"
+                    id="regionsTitle">How Dystopia changed in different regions?</h2>
+            </div>
+            <div class="regions-graph"></div>
+            <div class="graph-title">
+                <h2 class="graph-title--title"
+                    id="mapTitle">The map of Happiness</h2>
+            </div>
+            <div class="map-graph"></div>
         </main>
         <section class="lower"></section>
 
         <script src="https://d3js.org/d3.v4.min.js"
+            defer></script>
+        <script src="https://d3js.org/d3-array.v2.min.js"
             defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"
             integrity="sha512-nlO6OGj6wb0uu/thpSry7qFal63hfhCLExpWxYomYB3tBznqWmKggsDHNHSLjnVaoade9tv/rErN498NSzwBnA=="
@@ -66,12 +80,24 @@
             defer></script>
         <script src="https://unpkg.com/simple-statistics@7.2.0/dist/simple-statistics.min.js"
             defer></script>
+        <script src="https://unpkg.com/topojson@3"
+            defer></script>
+        <script src="https://d3js.org/d3-color.v2.min.js"
+            defer></script>
+        <script src="https://d3js.org/d3-interpolate.v2.min.js"
+            defer></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v2.min.js"
+            defer></script>
 
         <script src="static/js/viz_core.js"
             defer></script>
         <script src="static/js/viz_years.js"
             defer></script>
         <script src="static/js/viz_reasons.js"
+            defer></script>
+        <script src="static/js/viz_regions.js"
+            defer></script>
+        <script src="static/js/viz_map.js"
             defer></script>
         <script src="static/js/viz_main.js"
             defer></script>
